2003-10-15  Zoltan Varga  <vargaz@freemail.hu>

	* vararg.il: New file.

	* Makefile.am: Added vararg.il.

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* Makefile.am: fix so it works if builddir != srcdir

	* libtest.c: (mono_test_empty_struct) make it exist for 
	non-GCC	builds (and possibly pass depending on trampolines).
	(mono_test_marshal_bool_byref) bools marshal as ints by default
	
2003-10-13  Zoltan Varga  <vargaz@freemail.hu>

	* bug-46781.cs: New regression test.

	* libtest.c pinvoke2.cs: Add new test for SetLastError functionality.

	* Makefile.am (TEST_CS_SRC): Remove merged tests.

	* pinvoke2.cs pinvoke3.cs: Merge tests 4-8 into these files + 
	convert tests so they run with the test driver used by mini.

	* pinvoke3.cs libtest.c: Add tests for class arguments and return 
	values.

	* pinvoke4.cs pinvoke5.cs pinvoke6.cs pinvoke7.cs pinvoke8.cs: Removed.
	